@startuml vaults
title Vaults
hide empty members

package core {
    interface IVault
}

interface IBaseVault
interface IAsyncRedeemVault
interface IAsyncVault

IBaseVault -up-|> IVault
IAsyncRedeemVault -up-|> IBaseVault
IAsyncVault -up-|> IAsyncRedeemVault

abstract BaseVault
abstract BaseAsyncRedeemVault
abstract BaseSyncDepositVault
class AsyncVault
class SyncDepositVault

BaseAsyncRedeemVault -up-|> BaseVault
BaseSyncDepositVault -up-|> BaseVault
AsyncVault -up-|> BaseAsyncRedeemVault
SyncDepositVault -up-|> BaseAsyncRedeemVault
SyncDepositVault -up-|> BaseSyncDepositVault

BaseVault -up-|> IBaseVault
BaseAsyncRedeemVault -up-|> IAsyncRedeemVault
AsyncVault -up-|> IAsyncVault

@enduml
